--- a/first.html
+++ b/first.html
@@ -11,7 +11,7 @@
 <body>
     <div class="outline">
         <div id="first-box">
-            <a href="home.html" id="first-logo"><img src="/images/logo.png"></a>
+            <a href="login.html" id="first-logo"><img src="/images/logo.png"></a>
             <div id="first-text">
                 <p id="f1">일상에 스며든 차 한잔</p>
                 <p id="f2">Premium organic special tea</p>
