--- a/account.html
+++ b/account.html
@@ -17,13 +17,13 @@
 </head>
 
 <body>
-    <div class="account">
-        <header class="menu">
-            <div class="menu-hold"><i class="fas fa-equals fa-2x"></i></div>
+    
+    <header class="menu">
+        <div class="menu-hold"><i class="fas fa-equals fa-2x"></i></div>
             <div id="menu-in">
                 <div id="slide-back"></div>
                 <div class="menu-slide">
-                    <div class="menu-slide_logo"><img src="/images/logo-white.png"></div>
+                    <div class="menu-slide_logo"><img src="images/logo-white.png"></div>
                     <div class="menu-slide_list">
                         <ul>
                             <li class="menu-list">
@@ -59,8 +59,9 @@
                 </div>
             </div>
         </header>
+        <div class="account">
         <div class="account-main">
-            <a href="home.html"><img src="/images/logo-white.png"></a>
+            <a href="home.html"><img src="images/logo-white.png"></a>
             <span>ACCOUNT</span>
         </div>
         <div class="account-form">
