--- a/pick.html
+++ b/pick.html
@@ -19,7 +19,7 @@
             <div id="menu-in">
                 <div id="slide-back"></div>
                 <div class="menu-slide">
-                    <div class="menu-slide_logo"><img src="/images/logo-white.png"></div>
+                    <div class="menu-slide_logo"><img src="images/logo-white.png"></div>
                     <div class="menu-slide_list">
                         <ul>
                             <li class="menu-list">
@@ -63,61 +63,61 @@
         <div id="pick-main">
             <section class="pick" id="pick-tea">
                 <div class="pick_list">
-                    <a href="#"><img src="/tea/Earl Grey.jpg"></a>
+                    <a href="#"><img src="tea/Earl Grey.jpg"></a>
                     <span>Earl Grey</span>
                     <button><i class="fas fa-leaf"></i></button>
                 </div>
                 <div class="pick_list">
-                    <a href="#"><img src="/tea/Orange Blossom.jpg"></a>
+                    <a href="#"><img src="tea/Orange Blossom.jpg"></a>
                     <span>Orange Blossom</span>
                     <button><i class="fas fa-leaf"></i></button>
                 </div>
                 <div class="pick_list">
-                    <a href="#"><img src="/tea/English Breakfast.jpg"></a>
+                    <a href="#"><img src="tea/English Breakfast.jpg"></a>
                     <span>English Breakfast</span>
                     <button><i class="fas fa-leaf"></i></button>
                 </div>
                 <div class="pick_list">
-                    <a href="#"><img src="/tea/English Breakfast.jpg"></a>
+                    <a href="#"><img src="tea/English Breakfast.jpg"></a>
                     <span>English Breakfast</span>
                     <button><i class="fas fa-leaf"></i></button>
                 </div>
                 <div class="pick_list">
-                    <a href="#"><img src="/tea/English Breakfast.jpg"></a>
+                    <a href="#"><img src="tea/English Breakfast.jpg"></a>
                     <span>English Breakfast</span>
                     <button><i class="fas fa-leaf"></i></button>
                 </div>
             </section>
             <section class="pick" id="pick-teaware">
                 <div class="pick_list">
-                    <a href="#"><img src="/tea/Orange Blossom.jpg"></a>
+                    <a href="#"><img src="tea/Orange Blossom.jpg"></a>
                     <span>Orange Blossom</span>
                     <button><i class="fas fa-leaf"></i></button>
                 </div>
                 <div class="pick_list">
-                    <a href="#"><img src="/tea/Orange Blossom.jpg"></a>
+                    <a href="#"><img src="tea/Orange Blossom.jpg"></a>
                     <span>Orange Blossom</span>
                     <button><i class="fas fa-leaf"></i></button>
                 </div>
                 <div class="pick_list">
-                    <a href="#"><img src="/tea/Orange Blossom.jpg"></a>
+                    <a href="#"><img src="tea/Orange Blossom.jpg"></a>
                     <span>Orange Blossom</span>
                     <button><i class="fas fa-leaf"></i></button>
                 </div>
             </section>
             <section class="pick" id="pick-dessert">
                 <div class="pick_list">
-                    <a href="#"><img src="/tea/Earl Grey.jpg"></a>
+                    <a href="#"><img src="tea/Earl Grey.jpg"></a>
                     <span>Earl Grey</span>
                     <button><i class="fas fa-leaf"></i></button>
                 </div>
                 <div class="pick_list">
-                    <a href="#"><img src="/tea/Earl Grey.jpg"></a>
+                    <a href="#"><img src="tea/Earl Grey.jpg"></a>
                     <span>Earl Grey</span>
                     <button><i class="fas fa-leaf"></i></button>
                 </div>
                 <div class="pick_list">
-                    <a href="#"><img src="/tea/Earl Grey.jpg"></a>
+                    <a href="#"><img src="tea/Earl Grey.jpg"></a>
                     <span>Earl Grey</span>
                     <button><i class="fas fa-leaf"></i></button>
                 </div>
