--- a/logIn.html
+++ b/logIn.html
@@ -19,7 +19,7 @@
             <div id="menu-in">
                 <div id="slide-back"></div>
                 <div class="menu-slide">
-                    <div class="menu-slide_logo"><img src="/images/logo-white.png"></div>
+                    <div class="menu-slide_logo"><img src="images/logo-white.png"></div>
                     <div class="menu-slide_list">
                         <ul>
                             <li class="menu-list">
@@ -56,7 +56,7 @@
             </div>
         </header>
         <div class="logIn-main">
-            <a href="home.html"><img src="/images/logo.png"></a>
+            <a href="home.html"><img src="images/logo.png"></a>
             <form action="home.html" id="logIn-form">
                 <input type="text" placeholder="아이디" class="logIn-text" required>
                 <input type="password" placeholder="비밀번호" class="logIn-text" required>
