--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
             <div id="menu-in">
                 <div id="slide-back"></div>
                 <div class="menu-slide">
-                    <div class="menu-slide_logo"><img src="images/logo-white.png"></div>
+                    <div class="menu-slide_logo"><img src="images/logo-white.png" alt="white-logo"></div>
                     <div class="menu-slide_list">
                         <ul>
                             <li class="menu-list">
@@ -61,7 +61,7 @@
                         <p>오늘의 추천차</p>
                         <p>Chocolate Chai</p>
                     </div>
-                    <a href="#"><img src="tea/chocolate chai.jpg"></a>
+                    <a href="#"><img src="tea/chocolate-chai.jpg" alt="chocolate_chai"></a>
                 </div>
             </section>
             <section>
@@ -71,17 +71,17 @@
                 </div>
                 <div class="home_best-pick_content">
                     <div class="best-pick_num">
-                        <a href="#"><img src="tea/Earl Grey.jpg"></a>
+                        <a href="#"><img src="tea/Earl-Grey.jpg" alt="earl_grey"></a>
                         <span>Earl Grey</span>
                         <button><i class="fas fa-leaf"></i></button>
                     </div>
                     <div class="best-pick_num">
-                        <a href="#"><img src="tea/Orange Blossom.jpg"></a>
+                        <a href="#"><img src="tea/Orange-Blossom.jpg" alt="orange_blossom"></a>
                         <span>Orange Blossom</span>
                         <button><i class="fas fa-leaf"></i></button>
                     </div>
                     <div class="best-pick_num">
-                        <a href="#"><img src="tea/English Breakfast.jpg"></a>
+                        <a href="#"><img src="tea/English-Breakfast.jpg" alt="english_breakfast"></a>
                         <span>English Breakfast</span>
                         <button><i class="fas fa-leaf"></i></button>
                     </div>
@@ -90,7 +90,7 @@
             <section>
                 <span class="home-title">NEW RECIPE</span>
                 <div class="home-recipe">
-                    <img src="dessert/greentea creape.png">
+                    <img src="dessert/greentea-creape.png" alt="greentea_crepe">
                     <div class="home-recipe_text">
                         <span>그린티 크레이프</span>
                         <p>노오븐 디저트💚<br> 녹차 덕후를 위한 꾸덕꾸덕한 녹차 크레이프 만들기</p>
