--- a/home.html
+++ b/home.html
@@ -61,7 +61,7 @@
                         <p>오늘의 추천차</p>
                         <p>Chocolate Chai</p>
                     </div>
-                    <a href="#"><img src="tea/chocolate-chai.jpg" alt="chocolate_chai"></a>
+                    <a href="#"><img src="tea/blended/chocolate-chai.jpg" alt="chocolate_chai"></a>
                 </div>
             </section>
             <section>
@@ -71,17 +71,17 @@
                 </div>
                 <div class="home_best-pick_content">
                     <div class="best-pick_num">
-                        <a href="#"><img src="tea/Earl-Grey.jpg" alt="earl_grey"></a>
+                        <a href="#"><img src="tea/black/Earl-Grey.jpg" alt="earl_grey"></a>
                         <span>Earl Grey</span>
                         <button><i class="fas fa-leaf"></i></button>
                     </div>
                     <div class="best-pick_num">
-                        <a href="#"><img src="tea/Orange-Blossom.jpg" alt="orange_blossom"></a>
+                        <a href="#"><img src="tea/green/Orange-Blossom.jpg" alt="orange_blossom"></a>
                         <span>Orange Blossom</span>
                         <button><i class="fas fa-leaf"></i></button>
                     </div>
                     <div class="best-pick_num">
-                        <a href="#"><img src="tea/English-Breakfast.jpg" alt="english_breakfast"></a>
+                        <a href="#"><img src="tea/black/English-Breakfast.jpg" alt="english_breakfast"></a>
                         <span>English Breakfast</span>
                         <button><i class="fas fa-leaf"></i></button>
                     </div>
