--- a/pick.html
+++ b/pick.html
@@ -28,8 +28,7 @@
                                     <li><a href=""> 그린티</a></li>
                                     <li><a href=""> 블랙티</a></li>
                                     <li><a href=""> 차이티</a></li>
-                                    <li><a href=""> 보타니칼티</a></li>
-                                    <li><a href=""> 말차티</a></li>
+                                    <li><a href=""> 블랜디드티</a></li>
                                     <li><a href=""> 우롱티</a></li>
                                 </ul>
                             </li>
@@ -62,63 +61,64 @@
         </div>
         <div id="pick-main">
             <section class="pick" id="pick-tea">
-                <div class="pick_list">
-                    <a href="#"><img src="tea/Earl-Grey.jpg"></a>
+                <div class="pick_list content">
+                    <a href="#"><img src="tea/black/Earl-Grey.jpg"></a>
                     <span>Earl Grey</span>
                     <button><i class="fas fa-leaf"></i></button>
                 </div>
-                <div class="pick_list">
-                    <a href="#"><img src="tea/Orange-Blossom.jpg"></a>
+                <div class="pick_list content">
+                    <a href="#"><img src="tea/green/Orange-Blossom.jpg"></a>
                     <span>Orange Blossom</span>
                     <button><i class="fas fa-leaf"></i></button>
                 </div>
-                <div class="pick_list">
-                    <a href="#"><img src="tea/English-Breakfast.jpg"></a>
-                    <span>English Breakfast</span>
+                <div class="pick_list content">
+                    <a href="#"><img src="tea/blended/Blue Jasmine.jpg"></a>
+                    <span>Blue Jasmine</span>
                     <button><i class="fas fa-leaf"></i></button>
                 </div>
-                <div class="pick_list">
-                    <a href="#"><img src="tea/English-Breakfast.jpg"></a>
-                    <span>English Breakfast</span>
+                <div class="pick_list content">
+                    <a href="#"><img src="tea/blended/chocolate-chai.jpg"></a>
+                    <span>chocolate chai</span>
                     <button><i class="fas fa-leaf"></i></button>
                 </div>
-                <div class="pick_list">
-                    <a href="#"><img src="tea/English-Breakfast.jpg"></a>
-                    <span>English Breakfast</span>
+                <div class="pick_list content">
+                    <a href="#"><img src="tea/green/Sweet Matcha.jpg"></a>
+                    <span>Sweet Matcha</span>
                     <button><i class="fas fa-leaf"></i></button>
                 </div>
             </section>
             <section class="pick" id="pick-teaware">
-                <div class="pick_list">
-                    <a href="#"><img src="tea/Orange-Blossom.jpg"></a>
-                    <span>Orange Blossom</span>
+                <div class="pick_list content">
+                    <a href="#"><img src="teaware/Gongfu/repose Gaiwan.jpg"></a>
+                    <span>repose Gaiwan</span>
                     <button><i class="fas fa-leaf"></i></button>
                 </div>
-                <div class="pick_list">
-                    <a href="#"><img src="tea/Orange-Blossom.jpg"></a>
-                    <span>Orange Blossom</span>
+                <div class="pick_list content">
+                    <a href="#"><img src="teaware/Gongfu/Lotus Sharing Pitcher.jpg"></a>
+                    <span>Lotus Sharing Pitcher</span>
                     <button><i class="fas fa-leaf"></i></button>
                 </div>
-                <div class="pick_list">
-                    <a href="#"><img src="tea/Orange-Blossom.jpg"></a>
-                    <span>Orange Blossom</span>
+                <div class="pick_list content">
+                    <a href="#"><img src="teaware/Hasami/Hasami Tumbler Mug.jpg"></a>
+                    <span>Hasami Tubler Mug</span>
                     <button><i class="fas fa-leaf"></i></button>
                 </div>
             </section>
             <section class="pick" id="pick-dessert">
-                <div class="pick_list">
-                    <a href="#"><img src="tea/Earl-Grey.jpg"></a>
-                    <span>Earl Grey</span>
+                <div class="pick_list content">
+
+                    <a href="#"><img src="dessert/greentea-creape.png"></a>
+                    <span>녹차 크레이프</span>
                     <button><i class="fas fa-leaf"></i></button>
                 </div>
-                <div class="pick_list">
-                    <a href="#"><img src="tea/Earl-Grey.jpg"></a>
-                    <span>Earl Grey</span>
+                <div class="pick_list content">
+                    <a href="#"><img src="dessert/mattcha greentea chessecake blondies.jpg"></a>
+                    <span>말차 치즈케이크 블론디</span>
                     <button><i class="fas fa-leaf"></i></button>
                 </div>
-                <div class="pick_list">
-                    <a href="#"><img src="tea/Earl-Grey.jpg"></a>
-                    <span>Earl Grey</span>
+                <div class="pick_list content">
+                    <a href="#"><img src="dessert/lemon earl grey cake.jpg"></a>
+                    <span>레몬 얼그레이 케이크</span>
                     <button><i class="fas fa-leaf"></i></button>
                 </div>
             </section>
